--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,19 @@
 		<version>6.1.1.Final</version>
 	 </dependency>
 
+	 <!-- API, java.xml.bind module -->
+	 <dependency>
+		<groupId>jakarta.xml.bind</groupId>
+		<artifactId>jakarta.xml.bind-api</artifactId>
+		<version>4.0.0</version>
+	 </dependency>
+
+	 <!-- Runtime, com.sun.xml.bind module -->
+	 <dependency>
+		<groupId>org.glassfish.jaxb</groupId>
+		<artifactId>jaxb-runtime</artifactId>
+		<version>4.0.0</version>
+	 </dependency>
 
   </dependencies>
 
