--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>hibernate-tutorial</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <groupId>org.example</groupId>
+    <artifactId>hibernate-tutorial</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <name>hibernate-tutorial</name>
+    <name>hibernate-tutorial</name>
 
-  <url>https://www.youtube.com/c/MarcoCodes</url>
+    <url>https://www.youtube.com/c/MarcoCodes</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-  </properties>
+    <properties>
+	   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	   <maven.compiler.source>11</maven.compiler.source>
+	   <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
-  <dependencies>
-	 <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
-	 <dependency>
-		<groupId>org.junit.jupiter</groupId>
-		<artifactId>junit-jupiter</artifactId>
-		<version>5.9.0</version>
-		<scope>test</scope>
-	 </dependency>
+    <dependencies>
+	   <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+	   <dependency>
+		  <groupId>org.junit.jupiter</groupId>
+		  <artifactId>junit-jupiter</artifactId>
+		  <version>5.9.0</version>
+		  <scope>test</scope>
+	   </dependency>
 
-	 <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
-	 <dependency>
-		<groupId>org.assertj</groupId>
-		<artifactId>assertj-core</artifactId>
-		<version>3.23.1</version>
-		<scope>test</scope>
-	 </dependency>
-	 <dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<version>2.1.214</version>
-	 </dependency>
-	 <dependency>
-		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate-core</artifactId>
-		<version>6.1.1.Final</version>
-	 </dependency>
-	 <dependency>
-		<groupId>org.hibernate</groupId>
-		<artifactId>hibernate-jpamodelgen</artifactId>
-		<version>6.1.1.Final</version>
-	 </dependency>
+	   <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+	   <dependency>
+		  <groupId>org.assertj</groupId>
+		  <artifactId>assertj-core</artifactId>
+		  <version>3.23.1</version>
+		  <scope>test</scope>
+	   </dependency>
+	   <dependency>
+		  <groupId>com.h2database</groupId>
+		  <artifactId>h2</artifactId>
+		  <version>2.1.214</version>
+	   </dependency>
+	   <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>6.1.1.Final</version>
+	   </dependency>
+	   <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-jpamodelgen</artifactId>
+		  <version>6.1.1.Final</version>
+	   </dependency>
 
-	 <!-- API, java.xml.bind module -->
-	 <dependency>
-		<groupId>jakarta.xml.bind</groupId>
-		<artifactId>jakarta.xml.bind-api</artifactId>
-		<version>4.0.0</version>
-	 </dependency>
+	   <!-- API, java.xml.bind module -->
+	   <dependency>
+		  <groupId>jakarta.xml.bind</groupId>
+		  <artifactId>jakarta.xml.bind-api</artifactId>
+		  <version>4.0.0</version>
+	   </dependency>
 
-	 <!-- Runtime, com.sun.xml.bind module -->
-	 <dependency>
-		<groupId>org.glassfish.jaxb</groupId>
-		<artifactId>jaxb-runtime</artifactId>
-		<version>4.0.0</version>
-	 </dependency>
+	   <!-- Runtime, com.sun.xml.bind module -->
+	   <dependency>
+		  <groupId>org.glassfish.jaxb</groupId>
+		  <artifactId>jaxb-runtime</artifactId>
+		  <version>4.0.0</version>
+	   </dependency>
 
-  </dependencies>
+    </dependencies>
 
-  <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M7</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+    <build>
+	   <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+		  <plugins>
+			 <plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+			 </plugin>
+			 <plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+			 </plugin>
+			 <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+				    <execution>
+					   <id>add-source</id>
+					   <phase>generate-sources</phase>
+					   <goals>
+						  <goal>add-source</goal>
+					   </goals>
+					   <configuration>
+						  <sources>
+							 <source>target/generated-sources/annotations</source>
+						  </sources>
+					   </configuration>
+				    </execution>
+				</executions>
+			 </plugin>
+		  </plugins>
+	   </pluginManagement>
+    </build>
 </project>
