--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,23 @@
 
     <properties>
 	   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	   <maven.compiler.source>11</maven.compiler.source>
-	   <maven.compiler.target>11</maven.compiler.target>
+	   <maven.compiler.source>17</maven.compiler.source>
+	   <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
-	   <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
+
+	   <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>6.1.2.Final</version>
+	   </dependency>
+
+
+
+
+	   <!-- TESTING Dependencies -->
+
 	   <dependency>
 		  <groupId>org.junit.jupiter</groupId>
 		  <artifactId>junit-jupiter</artifactId>
@@ -27,7 +38,6 @@
 		  <scope>test</scope>
 	   </dependency>
 
-	   <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
 	   <dependency>
 		  <groupId>org.assertj</groupId>
 		  <artifactId>assertj-core</artifactId>
@@ -39,25 +49,12 @@
 		  <artifactId>h2</artifactId>
 		  <version>2.1.214</version>
 	   </dependency>
-	   <dependency>
-		  <groupId>org.hibernate</groupId>
-		  <artifactId>hibernate-core</artifactId>
-		  <version>6.1.1.Final</version>
-	   </dependency>
+
 	   <dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-jpamodelgen</artifactId>
 		  <version>6.1.1.Final</version>
 	   </dependency>
-
-	   <!-- API, java.xml.bind module -->
-	   <dependency>
-		  <groupId>jakarta.xml.bind</groupId>
-		  <artifactId>jakarta.xml.bind-api</artifactId>
-		  <version>4.0.0</version>
-	   </dependency>
-
-	   <!-- Runtime, com.sun.xml.bind module -->
 	   <dependency>
 		  <groupId>org.glassfish.jaxb</groupId>
 		  <artifactId>jaxb-runtime</artifactId>
